--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <div class="intro-text">
                     <h1>Nós amamos os animais</h1>
                     <p class="mb-4">Aqui pode ser o caminho mais curto para encontrar seu parceiro ideal.</p>
-                    <p><a href="#" class="btn btn-primary">Fazer um tour</a></p>
+                    <p><a class="btn btn-primary" asp-area="" asp-controller="Evento" asp-action="Index">Fazer um tour</a></p>
                 </div>
             </div>
             <div class="col-md-5 align-self-center text-center text-md-right">
@@ -55,7 +55,7 @@
                         </a>
                     </div>
                     <div class="col-lg-5 ml-auto align-self-center" data-aos="fade-left">
-                        <h2 class="text-black">Modern Equipment</h2>
+                        <h2 class="text-black">Equipamentos modernos</h2>
                         <p class="mb-4">Far far away, behind the word mountains, Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                         <p><a href="#" class="btn btn-primary">Read More</a></p>
                     </div>
@@ -73,87 +73,10 @@
                 <img class="img-fluid border10 rotate-reverse10" src="images/dog_doctor.jpg" alt="Image">
             </div>
             <div class="col-md-5 ml-auto align-self-center" data-aos="fade-left">
-                <h2 class="mb-2 heading mb-4">Meet <strong>Jean Smith</strong> Our Dog Veterenarian</h2>
+                <h2 class="mb-2 heading mb-4">Encontre o seu <strong>Veterinário</strong> ideal</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet praesentium tenetur quos eius asperiores incidunt <a href="#">reprehenderit</a> hic labore? Officiis enim laborum facere iure voluptatem autem veritatis cupiditate magnam saepe.</p>
                 <p>Nulla, beatae ducimus? Dolor distinctio tempore hic consequatur, magni consectetur possimus tenetur eius, placeat, eveniet facilis perferendis vitae deleniti incidunt! Incidunt, illum eum? Suscipit aliquid consequatur repudiandae doloremque est nisi.</p>
 
-            </div>
-        </div>
-    </div>
-</section>
-<section class="site-section" id="pricing-section">
-    <div class="container">
-        <div class="row justify-content-center" data-aos="fade-up">
-            <div class="col-lg-7 text-center heading-section mb-5">
-
-                <h2 class="mb-2 text-black heading">Pricing Table</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-        </div>
-        <div class="row no-gutters">
-            <div class="col-12 col-sm-6 col-md-6 col-lg-4 bg-primary p-3 p-md-5" data-aos="fade-up" data-aos-delay="">
-
-                <div class="pricing">
-                    <span class="icon-paw d-block display-5 text-white mb-3"></span>
-                    <h3 class="text-center text-white text-uppercase">Basic</h3>
-                    <div class="price text-center mb-4 ">
-                        <span><span>$50</span> / year</span>
-                    </div>
-                    <ul class="list-unstyled ul-check success mb-5">
-
-                        <li>Officia quaerat eaque neque</li>
-                        <li>Possimus aut consequuntur incidunt</li>
-                        <li class="remove">Lorem ipsum dolor sit amet</li>
-                        <li class="remove">Consectetur adipisicing elit</li>
-                        <li class="remove">Dolorum esse odio quas architecto sint</li>
-                    </ul>
-                    <p class="text-center">
-                        <a href="#" class="btn btn-secondary">Buy Now</a>
-                    </p>
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 col-md-6 col-lg-4 bg-dark  p-3 p-md-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="pricing">
-                    <span class="icon-paw d-inline-block display-5 text-white mb-3"></span>
-                    <span class="icon-paw d-inline-block display-5 text-white mb-3"></span>
-                    <h3 class="text-center text-white text-uppercase">Premium</h3>
-                    <div class="price text-center mb-4 ">
-                        <span><span>$100</span> / year</span>
-                    </div>
-                    <ul class="list-unstyled ul-check success mb-5">
-
-                        <li>Officia quaerat eaque neque</li>
-                        <li>Possimus aut consequuntur incidunt</li>
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Consectetur adipisicing elit</li>
-                        <li class="remove">Dolorum esse odio quas architecto sint</li>
-                    </ul>
-                    <p class="text-center">
-                        <a href="#" class="btn btn-primary">Buy Now</a>
-                    </p>
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 col-md-6 col-lg-4 bg-primary  p-3 p-md-5" data-aos="fade-up" data-aos-delay="200">
-                <div class="pricing">
-                    <span class="icon-paw d-inline-block display-5 text-white mb-3"></span>
-                    <span class="icon-paw d-inline-block display-5 text-white mb-3"></span>
-                    <span class="icon-paw d-inline-block display-5 text-white mb-3"></span>
-                    <h3 class="text-center text-white text-uppercase">Professional</h3>
-                    <div class="price text-center mb-4 ">
-                        <span><span>$200</span> / year</span>
-                    </div>
-                    <ul class="list-unstyled ul-check success mb-5">
-
-                        <li>Officia quaerat eaque neque</li>
-                        <li>Possimus aut consequuntur incidunt</li>
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Consectetur adipisicing elit</li>
-                        <li>Dolorum esse odio quas architecto sint</li>
-                    </ul>
-                    <p class="text-center">
-                        <a href="#" class="btn btn-secondary">Buy Now</a>
-                    </p>
-                </div>
             </div>
         </div>
     </div>
@@ -163,7 +86,7 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
 
-                <h2 class="text-black mb-2">Frequently Ask Questions</h2>
+                <h2 class="text-black mb-2">Perguntas mais frequentes</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit facere quia quas quod at, reprehenderit eaque nam.</p>
             </div>
         </div>
@@ -223,7 +146,7 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
 
-                <h2 class="text-black mb-2">Happy Customers</h2>
+                <h2 class="text-black mb-2">Clientes felizes</h2>
             </div>
         </div>
         <div data-aos="fade-up" data-aos-delay="200">
@@ -291,7 +214,7 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
 
-                <h2 class="text-black mb-2">Dogger Blog</h2>
+                <h2 class="text-black mb-2">Amigos disponíveis</h2>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
         </div>
@@ -422,11 +345,11 @@
                     <h2 class="h4 mb-5 heading">Contact Form</h2>
                     <div class="row form-group">
                         <div class="col-md-6 mb-3 mb-md-0">
-                            <label for="fname">First Name</label>
+                            <label for="fname">Nome</label>
                             <input type="text" id="fname" class="form-control">
                         </div>
                         <div class="col-md-6">
-                            <label for="lname">Last Name</label>
+                            <label for="lname">Sobrenome</label>
                             <input type="text" id="lname" class="form-control">
                         </div>
                     </div>
@@ -440,19 +363,19 @@
                     <div class="row form-group">
 
                         <div class="col-md-12">
-                            <label for="subject">Subject</label>
-                            <input type="subject" id="subject" class="form-control">
+                            <label for="subject">Assunto</label>
+                            <input type="text" id="subject" class="form-control">
                         </div>
                     </div>
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <label for="message">Message</label>
-                            <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
+                            <label for="message">Mensagem</label>
+                            <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Descreva suas anotações ou perguntas..."></textarea>
                         </div>
                     </div>
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <input type="submit" value="Send Message" class="btn btn-dark btn-md text-white">
+                            <input type="submit" value="Enviar" class="btn btn-dark btn-md text-white">
                         </div>
                     </div>
 
@@ -462,19 +385,19 @@
                 <div class="row justify-content-center align-items-center h-100">
                     <div class="col-lg-6 text-center heading-section mb-5 align-self-center">
 
-                        <h2 class=" mb-5 text-black">Contact Us</h2>
+                        <h2 class=" mb-5 text-black">Contato</h2>
                         <ul class="list-unstyled text-left address">
                             <li>
-                                <span class="d-block">Address:</span>
-                                <p>Melbourne St,South Birbane 4101 Austraila</p>
+                                <span class="d-block">Endereço:</span>
+                                <p>Avenida Eduardo Elias Zahran - Jardim Paulista, Campo Grande - MS</p>
                             </li>
                             <li>
-                                <span class="d-block">Phone:</span>
-                                <p>+(000) 123 4567 89</p>
+                                <span class="d-block">Telefone:</span>
+                                <p>(67) 99999-9999</p>
                             </li>
                             <li>
                                 <span class="d-block">Email:</span>
-                                <p>info@yourdomain.com</p>
+                                <p>fabrica@senac.ms.br</p>
                             </li>
                         </ul>
                     </div>
