--- a/ProjetoPET/Views/Evento/Index.cshtml
+++ b/ProjetoPET/Views/Evento/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<ProjetoPET.Models.Eventos>
 
 @{
+    Layout = "~/Views/Shared/_LayoutTour.cshtml";
     ViewData["Title"] = "Index";
 }
 
