--- a/ProjetoPET/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/ProjetoPET/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ 
-    Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTour.cshtml";
 }
 
 <h2>Manage your account</h2>
