Tela De Adocao em andamento

--- a/ProjetoPET/Views/Adocao/Delete.cshtml
+++ b/ProjetoPET/Views/Adocao/Delete.cshtml
@@ -12,16 +12,52 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Contato)
+            @Html.DisplayNameFor(model => model.Nome)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Contato)
+            @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Pet)
+            @Html.DisplayNameFor(model => model.Raca)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Pet.Id)
+            @Html.DisplayFor(model => model.Raca)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Descricao)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Descricao)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Endereco)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Endereco)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Numero)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Numero)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Bairo)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Bairo)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Telefone)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Telefone)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Photo)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Photo)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.UsuarioId)
