--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -54,6 +54,8 @@
                                 <li><a href="#blog-section" class="nav-link">Amigos disponíveis</a></li>
                                 <li><a href="#services-section" class="nav-link">Serviços</a></li>
                                 <li><a href="#contact-section" class="nav-link">Contato</a></li>
+                                
+                                <li><a href="#Produto-Index" class="nav-link">Produto</a></li>
                             </ul>
                         </nav>
                     </div>
