--- a/ProjetoPET/wwwroot/css/pao_com_geleia.css
+++ b/ProjetoPET/wwwroot/css/pao_com_geleia.css
@@ -1,8 +1,4 @@
-﻿.imagem_loja {
-    width:160px;
-    height:160px;
-    border-radius:100%;
-}
+﻿
 /* Always set the map height explicitly to define the size of the div
     * element that contains the map. */
 #map {
@@ -86,3 +82,16 @@ html, body {
 #target {
     width: 345px;
 }
+.circular--landscape {
+    display: inline-block;
+    position: relative;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    
+}
+.circular--landscape img {
+        width: auto;
+        height: 100%;
+        margin-left: -50px;
+    }
