--- a/ProjetoPET/Views/Lojas/Create.cshtml
+++ b/ProjetoPET/Views/Lojas/Create.cshtml
@@ -3,21 +3,18 @@
 @{
     ViewData["Title"] = "Create";
 }
+    <h2>Create</h2>
 
-<h2>Create</h2>
-
-<h4>Lojas</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form enctype="multipart/form-data" asp-action="Create">
+    <h4>Lojas</h4>
+    <div>
+        <form enctype="multipart/form-data" asp-action="Create" class="col-md-12">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group ">
                 <label asp-for="NomeLoja" class="control-label"></label>
                 <input asp-for="NomeLoja" class="form-control" />
                 <span asp-validation-for="NomeLoja" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group ">
                 <label asp-for="RazaoSocial" class="control-label"></label>
                 <input asp-for="RazaoSocial" class="form-control" />
                 <span asp-validation-for="RazaoSocial" class="text-danger"></span>
@@ -60,7 +57,7 @@
             <div class="form-group">
                 <label asp-for="Cidade" class="control-label"></label>
                 <input asp-for="Cidade" class="form-control" />
-                <span asp-validation-for="Cidade" class="text-danger" ></span>
+                <span asp-validation-for="Cidade" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Telefone" class="control-label"></label>
@@ -81,30 +78,28 @@
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
+    </div> 
+    <div>
+        <a asp-action="Index">Back to List</a>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-<script>
-    function Checkfiles() {
-        var fup = document.getElementById('filename');
-        var fileName = fup.value;
-        var ext = fileName.substring(fileName.lastIndexOf('.') + 1);
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        <script>
+            function Checkfiles() {
+                var fup = document.getElementById('filename');
+                var fileName = fup.value;
+                var ext = fileName.substring(fileName.lastIndexOf('.') + 1);
 
-        if (ext == "jpeg" || ext == "png") {
-            return true;
-        }
-        else {
-            return false;
-        }
+                if (ext == "jpeg" || ext == "png") {
+                    return true;
+                }
+                else {
+                    return false;
+                }
+            }
+        </script>
+
+
+
     }
-</script>
-        
-
-   
-}
