--- a/ProjetoPET/Views/Lojas/Delete.cshtml
+++ b/ProjetoPET/Views/Lojas/Delete.cshtml
@@ -7,10 +7,10 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
+<div class="row">
     <h4>Lojas</h4>
     <hr />
-    <dl class="dl-horizontal">
+    
         <dt>
             @Html.DisplayNameFor(model => model.NomeLoja)
         </dt>
@@ -101,7 +101,7 @@
         <dd>
             @Html.DisplayFor(model => model.UpdatedData)
         </dd>
-    </dl>
+   
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
