--- a/ProjetoPET/Views/Lojas/Index.cshtml
+++ b/ProjetoPET/Views/Lojas/Index.cshtml
@@ -13,11 +13,12 @@
 <h2>Index</h2>
 
 <p>
+    
     <a asp-action="Create">Create New</a>
 </p>
 
 
-<div class="row col-md-12">
+<div class="row col-md-12 ">
     @foreach (var item in Model)
     {
         var photoPath = "~/images/LojasPhotos/" + (item.ImagePath ?? "imagem.png");
@@ -29,18 +30,17 @@
             }
         </style>
 
-        <div class="col-md-4 form-group ">
-            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+        <div class="col-md-6 form-group ">
+           
 
-            <div class="card mb-4" style="max-width: 540px;">
+            <div class="card md-8" style="max-width: 540px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="@photoPath" class="imagem_loja" asp-append-version="true" />
+                        <img src="@photoPath" asp-append-version="true" style="width:100%;height:100%"/>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
+
                             <h5 class="card-title"> @Html.DisplayFor(modelItem => item.NomeLoja)</h5>
                             <p class="card-text">
                                 <i class="fas fa-map-marker-alt"></i>
@@ -52,6 +52,9 @@
                             <p>
                                 <i class="fas fa-envelope"></i>  @Html.DisplayFor(modelItem => item.Email)
                             </p>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                            <a asp-action="Details" asp-route-id="@item.Id">Visualizar</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ExemploModalCentralizado" onclick='pinar("@item.Endereco,@item.Numero.ToString(),@item.Cidade")'>
                                 Visualizar Localização
                             </button>
